--- a/main.css
+++ b/main.css
@@ -1,33 +1,71 @@
 body {
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
     margin: 0;
+    background-color: #1a1a1a;
+    font-family: Arial, sans-serif;
+    color: #fff;
+}
+
+h1{
+    font-size: 35px;
+    margin: 1rem;
 }
 
 .password-entry {
-    display: inline-block;
     text-align: center;
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.input-password {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    font-size: 24px;
+    margin: 10px auto;
+    border: 2px solid #fff;
+    background-color: #1a1a1a;
+    color: #fff;
 }
 
 .button-row {
     display: flex;
     justify-content: center;
-    margin: 5px;
+    margin: 10px 0;
 }
 
 .number-button {
-    width: 40px;
-    height: 40px;
-    margin: 5px;
-    font-size: 18px;
-    border: 2px solid #000;
+    width: 60px;
+    height: 60px;
+    font-size: 24px;
+    border: 2px solid #fff;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #1a1a1a;
+    color: #fff;
     cursor: pointer;
     transition: background-color 0.2s;
 }
 
 .number-button:hover {
-    background-color: #ccc;
+    background-color: #000;
+}
+
+.submit-button {
+    width: 100px;
+    height: 50px;
+    font-size: 24px;
+    background-color: #00f;
+    color: #fff;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+}
+
+.submit-button:hover {
+    background-color: #00a;
 }
