--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ h1{
     color: #fff;
     cursor: pointer;
     transition: background-color 0.2s;
+    margin: 0.5rem;
 }
 
 .number-button:hover {
